[build-system]
requires = ["setuptools>=75.8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyutils"
version = "0.1"
description = "my util functions for python"
readme = "README.md"
authors = [
	{name = "SuperStormer", email = "larry.p.xue@gmail.com"}
]
license = "MIT"
license-files = ["LICENSE"]
urls.source = "https://github.com/SuperStormer/pyutils"
dependencies = [
	"pycryptodome>=3.15.0",
	"requests>=2.28.0",
	"aiofiles>=0.8.0",
	"aiohttp>=3.8.1",
	"z3-solver>=4.10.2.0",
	"keystone-engine>=0.9.2",
	"beautifulsoup4>=4.11.1",
	"lxml>=4.9.2",
]

[project.scripts]
caesar = "utils.scripts.caesar:main"
dedent = "utils.scripts.dedent:main"
iasm = "utils.scripts.iasm:main"
